@@ -9,6 +9,7 @@
 - Make sure the search for the first header aborts after 64K of one-byte reads, as always intended.
   Certain files (or even random data) were able to fool mpg123 sufficiently enough that it basically reads through the whole file in 1-byte steps in search for MPEG data.
   The limit of 64K will very likely be configurable in a future mpg123 version.
+- Fix subtle bug with seeking in feeder mode: A seek close to the current position (meaning: the needed data offset is already in mpg123's buffer chain) resulted in skipped bytes.
 
 1.10.0
 ---
